force-app/main/default/objects/EscandalloLineItem__c/fields/cal_Costo_Financiero_Deposito_Fabrica__c.field-meta.xml
<CustomField>
    <fullName>cal_Costo_Financiero_Deposito_Fabrica__c</fullName>
    <formula>cal_Importe_Adelantado__c * Escandallo__r.PlazoFabricacion__c / 360 * Escandallo__r.TipoDeInteresDepositoFabrica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cal Costo Financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>