force-app/main/default/objects/EscandalloLineItem__c/fields/cal_Costo_Financiero_Financiacion_Client__c.field-meta.xml
<CustomField>
    <fullName>cal_Costo_Financiero_Financiacion_Client__c</fullName>
    <formula>PrecioCompraFabrica__c * Producto__r.UnidadesContainer20__c * Escandallo__r.PlazoPago__c / 360 * Escandallo__r.TipoDeInteresFinanciacionClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cal Costo Financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>