force-app/main/default/objects/EscandalloLineItem__c/fields/cal_Importe_Adelantado__c.field-meta.xml
<CustomField>
    <fullName>cal_Importe_Adelantado__c</fullName>
    <description>Utilizado en el cálculo de los costos extra</description>
    <formula>PrecioCompraFabrica__c * Producto__r.UnidadesContainer20__c * Escandallo__r.PorcentajeDepositoAFabrica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Utilizado en el cálculo de los costos extra</inlineHelpText>
    <label>cal Importe Adelantado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>