force-app/main/default/objects/EscandalloLineItem__c/fields/CodigoProducto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProducto__c</fullName>
    <formula>Producto__r.CodigoDeProductoBase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>