force-app/main/default/objects/EscandalloLineItem__c/fields/CostoImportacionUnidad__c.field-meta.xml
<CustomField>
    <fullName>CostoImportacionUnidad__c</fullName>
    <formula>(PrecioCompraFabrica__c *  Escandallo__r.ComisionAdministrativa__c ) +(Costos_Extra__c / Producto__r.UnidadesContainer20__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Extra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>