force-app/main/default/objects/EscandalloLineItem__c/fields/CostoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CostoOrigen__c</fullName>
    <formula>PrecioCompraFabrica__c * UnidadesHQ2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Fábrica (xHQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>