force-app/main/default/objects/EscandalloLineItem__c/fields/Costos_Extra__c.field-meta.xml
<CustomField>
    <fullName>Costos_Extra__c</fullName>
    <formula>Gastos_Bancarios__c + Escandallo__r.GastosEnPuerto__c + Escandallo__r.GastosInspeccion__c + Escandallo__r.OtrosCostos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costos Extra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>