force-app/main/default/objects/EscandalloLineItem__c/fields/CostoTotalUnidad__c.field-meta.xml
<CustomField>
    <fullName>CostoTotalUnidad__c</fullName>
    <formula>(PrecioCompraFabrica__c +  CostoImportacionUnidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total Unidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>