force-app/main/default/objects/EscandalloLineItem__c/fields/Descripcion_Producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Producto__c</fullName>
    <formula>Producto__r.Descripcion_Larga__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Producto</label>
    <type>Text</type>
</CustomField>