force-app/main/default/objects/EscandalloLineItem__c/fields/Escandallo__c.field-meta.xml
<CustomField>
    <fullName>Escandallo__c</fullName>
    <label>Escandallo</label>
    <referenceTo>Escandallo__c</referenceTo>
    <relationshipLabel>Items Escandallo</relationshipLabel>
    <relationshipName>ItemsEscandallo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>