force-app/main/default/objects/EscandalloLineItem__c/fields/Gastos_Bancarios__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Bancarios__c</fullName>
    <formula>cal_Costo_Financiero_Deposito_Fabrica__c +  cal_Costo_Financiero_Financiacion_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gastos Bancarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>