force-app/main/default/objects/EscandalloLineItem__c/fields/Necesita_Revision__c.field-meta.xml
<CustomField>
    <fullName>Necesita_Revision__c</fullName>
    <description>Campo del sistema, se creó para detectar Items para los cuales no esta estipulado el costo extra o el número parece incorrecto (mayor que el 16%)</description>
    <formula>OR( PrecioCompraFabrica__c = 0,
NOT(ISNUMBER(TEXT(CostoImportacionUnidad__c))),
CostoImportacionUnidad__c &gt;  PrecioCompraFabrica__c * 0.16)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo del sistema, se creó para detectar Items para los cuales no esta estipulado el costo extra o el número parece incorrecto (mayor que el 16%)</inlineHelpText>
    <label>Necesita Revisión</label>
    <type>Checkbox</type>
</CustomField>