force-app/main/default/objects/EscandalloLineItem__c/fields/Porcentaje_Oficina_GS__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Oficina_GS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Oficina GS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>