force-app/main/default/objects/EscandalloLineItem__c/fields/PorcentajeCubicajeUnidad__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeCubicajeUnidad__c</fullName>
    <defaultValue>1</defaultValue>
    <label>% Cubicaje Unidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>