force-app/main/default/objects/EscandalloLineItem__c/fields/PrecioCompraFabrica__c.field-meta.xml
<CustomField>
    <fullName>PrecioCompraFabrica__c</fullName>
    <label>Costo Fábrica</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>