force-app/main/default/objects/EscandalloLineItem__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El producto no existe o no es un producto de fábrica.</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>1-Producto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Items Escandallo</relationshipLabel>
    <relationshipName>ItemsEscandallo</relationshipName>
    <type>Lookup</type>
</CustomField>