force-app/main/default/objects/EscandalloLineItem__c/fields/PVP_21__c.field-meta.xml
<CustomField>
    <fullName>PVP_21__c</fullName>
    <formula>CostoTotalUnidad__c / (0.79 - Porcentaje_Oficina_GS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PVP 21%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>