force-app/main/default/objects/EscandalloLineItem__c/fields/UnidadesHQ2__c.field-meta.xml
<CustomField>
    <fullName>UnidadesHQ2__c</fullName>
    <label>Unidades HQ 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>