force-app/main/default/objects/EscandalloLineItem__c/fields/UnidadesHQ__c.field-meta.xml
<CustomField>
    <fullName>UnidadesHQ__c</fullName>
    <formula>Producto__r.UnidadesHQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidades HQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>